--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="wrap">
                     <img src="./assets/images/preview.jpg" alt="네이버 클론">
                     <div class="wrap-text">
-                        <p>#클론코딩 #pc #웹표준</p>
+                        <p>#Clone Coding</p>
                         <h2>네이버</h2>
                         <div class="bt">
                             <button><a href="https://bora1004im.github.io/NAVER/" target="_blank">→ VIEW SITE</a></button>
@@ -103,7 +103,7 @@
                 <div class="wrap">
                     <img src="./assets/images/preview.jpg" alt="네이버 클론">
                     <div class="wrap-text">
-                        <p>#리뉴얼 사이트</p>
+                        <p>#Website Renewal</p>
                         <h2>할리스</h2>
                         <div class="bt">
                             <button><a href="https://bora1004im.github.io/HOLLYS/index.html" target="_blank">→ VIEW SITE</a></button>
@@ -114,7 +114,7 @@
                 <div class="wrap">
                     <img src="./assets/images/preview.jpg" alt="네이버 클론">
                     <div class="wrap-text">
-                        <p>#리뉴얼 사이트</p>
+                        <p>#Full Project</p>
                         <h2>포레스트</h2>
                         <div class="bt">
                             <button><a href="https://itsjuhee.github.io/forrest/" target="_blank"></a>→ VIEW SITE</button>
@@ -125,10 +125,10 @@
                 <div class="wrap">
                     <img src="./assets/images/preview.jpg" alt="네이버 클론">
                     <div class="wrap-text">
-                        <p>#리뉴얼 사이트</p>
+                        <p>#Website Renewal</p>
                         <h2>사상구심리상담센터</h2>
                         <div class="bt">
-                            <button>→ VIEW SITE</button>
+                            <button><a href="http://sasanggu.co.kr/" target="_blank">→ VIEW SITE</a></button>
                             <button>→ CODE REVIEW</button>
                         </div>
                     </div>
@@ -136,10 +136,10 @@
                 <div class="wrap">
                     <img src="./assets/images/preview.jpg" alt="네이버 클론">
                     <div class="wrap-text">
-                        <p></p>
+                        <p>#WordPress Site</p>
                         <h2>바른마음한의원</h2>
                         <div class="bt">
-                            <button>→ VIEW SITE</button>
+                            <button><a href="https://bareunmind.co.kr/" target="_blank">→ VIEW SITE</a></button>
                             <button>→ CODE REVIEW</button>
                         </div>
                     </div>
@@ -147,10 +147,10 @@
                 <div class="wrap">
                     <img src="./assets/images/preview.jpg" alt="네이버 클론">
                     <div class="wrap-text">
-                        <p>#리뉴얼 사이트</p>
+                        <p>#Freelance Work</p>
                         <h2>DPU</h2>
                         <div class="bt">
-                            <button>→ VIEW SITE</button>
+                            <button><a href="http://www.designplusu.co.kr/index.html" target="_blank"></a>→ VIEW SITE</button>
                             <button>→ CODE REVIEW</button>
                         </div>
                     </div>
