--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="title-text">PROJECTS</div>
             <div class="contents">
                 <div class="wrap">
-                    <img src="./assets/images/preview.jpg" alt="네이버 클론">
+                    <img src="./assets/images/mockup01.jpg" alt="할리스">
                     <div class="wrap-text">
                         <p>#Website Renewal</p>
                         <h2>할리스</h2>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="wrap">
-                    <img src="./assets/images/preview.jpg" alt="네이버 클론">
+                    <img src="./assets/images/mockup02.jpg" alt="포레스트">
                     <div class="wrap-text">
                         <p>#Full Project</p>
                         <h2>포레스트</h2>
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="wrap">
-                    <img src="./assets/images/preview.jpg" alt="네이버 클론">
+                    <img src="./assets/images/mockup03.jpg" alt="셀리턴">
                     <div class="wrap-text">
                         <p>#Clone Coding</p>
                         <h2>셀리턴</h2>
@@ -147,18 +147,18 @@
                     </div>
                 </div>
                 <div class="wrap">
-                    <img src="./assets/images/preview.jpg" alt="네이버 클론">
+                    <img src="./assets/images/mockup04.jpg" alt="네이버">
                     <div class="wrap-text">
                         <p>#Clone Coding</p>
                         <h2>네이버</h2>
                         <div class="bt">
                             <button><a href="https://bora1004im.github.io/NAVER/" target="_blank">→ VIEW SITE</a></button>
-                            <button<a href="https://velog.io/@bora1p11/posts" target="_blank">→ CODE REVIEW</button>
+                            <button><a href="https://velog.io/@bora1p11/posts" target="_blank">→ CODE REVIEW</a></button>
                         </div>
                     </div>
                 </div>
                 <div class="wrap">
-                    <img src="./assets/images/preview.jpg" alt="네이버 클론">
+                    <img src="./assets/images/mockup05.jpg" alt="바른마음한의원">
                     <div class="wrap-text">
                         <p>#WordPress Site</p>
                         <h2>바른마음한의원</h2>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <div class="wrap">
-                    <img src="./assets/images/preview.jpg" alt="네이버 클론">
+                    <img src="./assets/images/mockup06.jpg" alt="DPU">
                     <div class="wrap-text">
                         <p>#Freelance Work</p>
                         <h2>DPU</h2>
@@ -183,10 +183,19 @@
         </div>
         <div class="container04">
             <div class="title-text">Contact us</div>
+
+            <p>Pixel Perfect, User-Friendly.</p>
+            <span>디테일까지 섬세하게, 사용자 경험을 고민하며 만듭니다.<br>
+                항상 새로운 것을 배우고, 도전하며 성장하는 디자이너이자 퍼블리셔로서,<br>
+                더 나은 결과물을 만들기 위해 끊임없이 노력하고 있습니다.<br>
+            </span>
             <div class="contents">
                 <div class="email">
+                    📩 bora1p11@naver.com
                 </div>
-                <div class="phone"></div>
+                <div class="phone">
+                    📞 010-8648-0357
+                </div>
             </div>
         </div>
     </main>
