--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <p>#Full Project</p>
                         <h2>포레스트</h2>
                         <div class="bt">
-                            <button><a href="https://itsjuhee.github.io/forrest/" target="_blank"></a>→ VIEW SITE</button>
+                            <button><a href="https://itsjuhee.github.io/forrest/index.html" target="_blank"></a>→ VIEW SITE</button>
                             <button>→ CODE REVIEW</button>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                         <p>#Clone Coding</p>
                         <h2>셀리턴</h2>
                         <div class="bt">
-                            <button><a href="https://bora1004im.github.io/CELLRTURN/" target="_blank">→ VIEW SITE</a></button>
+                            <button><a href="javascript:void(0);" onclick="openMobileWindow();">→ VIEW SITE</a></button>
                             <button>→ CODE REVIEW</button>
                         </div>
                     </div>
