--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@
                         <p>#Freelance Work</p>
                         <h2>DPU</h2>
                         <div class="bt">
-                            <button><a href="http://www.designplusu.co.kr/index.html" target="_blank"></a>→ VIEW SITE</button>
+                            <button>
+                                <a href="http://www.designplusu.co.kr/index.html" target="_blank"></a>
+                                → VIEW SITE
+                            </button>
                             <button>→ CODE REVIEW</button>
                         </div>
                     </div>
