--- a/index.html
+++ b/index.html
@@ -175,9 +175,8 @@
                         <h2>DPU</h2>
                         <div class="bt">
                             <button>
-                                <a href="http://www.designplusu.co.kr/index.html" target="_blank"></a>
-                                → VIEW SITE
-                            </button>
+                                <a href="http://www.designplusu.co.kr/index.html" target="_blank">→ VIEW SITE</a>
+                            </button>                            
                             <button>→ CODE REVIEW</button>
                         </div>
                     </div>
